[gd_scene load_steps=4 format=3 uid="uid://dw8bf7sywj5fc"]

[ext_resource type="Script" uid="uid://u034ohdmigl0" path="res://Scripts/corrupted_crystal.gd" id="1_cbvm3"]
[ext_resource type="Texture2D" uid="uid://dkeapymn203j6" path="res://Assets/corrupted_crystal.png" id="1_r3a5r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3a5r"]
radius = 28.0179

[node name="corrupted_crystal" type="Node2D"]
z_index = 1
script = ExtResource("1_cbvm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_r3a5r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r3a5r")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
